# automatilib

./: .gitignore  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: checks.yaml  deploy.yaml
automatilib/: i_dot_ai_models.py  settings.py
automatilib/cola/: backend.py  urls.py  views.py
automatilib/cola_auth/: i_dot_ai_cola_apps.py  i_dot_ai_cola_backend.py  i_dot_ai_cola_urls.py  i_dot_ai_cola_views.py
automatilib/core/: apps.py  i_dot_ai_models.py  i_dot_ai_settings.py  i_dot_ai_utils.py  settings.py
automatilib/core/migrations/: 0001_automatilib_user.py
automatilib/pepsi/: core.py  forms.py  urls.py  views.py
cola/: __init__.py  apps.py  backend.py  urls.py  views.py
cola_auth/: i_dot_ai_cola_views.py
core/: apps.py  settings.py
example_project/: apps.py  models.py  settings.py  urls.py  views.py
example_project/migrations/: 0001_initial.py
example_project/templates/: login.html
example_project/templates/auth/: login-error.html
tests/: __init__.py  test_choices.py
tests/test_cola/: conftest.py  test_backend.py  test_login.py
tests/test_core/: test_choices.py
tests/test_pepsi/: test_login.py
