[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 120
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv"
extend-ignore = ["E203", "W503", "E231", "N804", "N805", "E731", "N815"]

[tool.poetry]
name = "automatilib"
version = "0.1.0"
authors = ["i.AI <i-dot-ai-team@cabinetoffice.gov.uk>"]
maintainers = ["i.AI <i-dot-ai-team@cabinetoffice.gov.uk>"]
license = "BSD"
description = "Automatilib is common django code used by the i.AI team."
readme = "README.rst"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.11"
django = "^4.2.6"
requests = "^2.31.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
flake8-isort = "^6.1.0"
flake8-print = "^5.0.0"
flake8-blind-except = "^0.2.1"
pep8-naming = "^0.13.3"
black = "^23.10.0"
bandit = "^1.7.5"
nose = "^1.3.7"
coverage = "^7.3.2"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
